# kfarms

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  NOTICE  README.md
programs/kfarms/: Cargo.toml
programs/kfarms/src/: farm_operations.rs  lib.rs  stake_operations.rs  state.rs  token_operations.rs  types.rs
programs/kfarms/src/handlers/: handler_add_reward.rs  handler_deposit_to_farm_vault.rs  handler_harvest_reward.rs  handler_initialize_farm.rs  handler_initialize_farm_delegated.rs  handler_initialize_global_config.rs  handler_initialize_reward.rs  handler_initialize_user.rs  handler_refresh_farm.rs  handler_refresh_user_state.rs  handler_reward_user_once.rs  handler_set_stake_delegated.rs  handler_stake.rs  handler_transfer_ownership.rs  handler_unstake.rs  handler_update_farm_admin.rs  handler_update_farm_config.rs  handler_update_global_config.rs  handler_update_global_config_admin.rs  handler_update_second_delegated_authority.rs  handler_withdraw_from_farm_vault.rs  handler_withdraw_reward.rs  handler_withdraw_slashed_amount.rs  handler_withdraw_treasury.rs  handler_withdraw_unstaked_deposits.rs  mod.rs
programs/kfarms/src/utils/: accessors.rs  constraints.rs  consts.rs  macros.rs  math.rs  mod.rs  scope.rs  withdrawal_penalty.rs
tests/: kfarms.ts
