[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["dex", "token", "token_2022", "metadata"] }

solana-sdk = "1.17.18"

spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "2.3.0"

decimal-wad = "0.1.9"
