[package]
name = "farms"
description = "Kamino Farms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "farms"
doctest = false

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
devnet = []
localnet = []
mainnet = []
derive-serde = ["serde"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
spl-token.workspace = true
decimal-wad.workspace = true
num-traits = "0.2"
num-derive = "0.3"
num_enum = "0.5.0"
solana-security-txt = "1.1.1"
serde = { version = "1.0.134", optional = true }
static_assertions = "1.1.0"
scope = { git = "https://github.com/Kamino-Finance/scope", package = "scope-types", branch = "anchor_0.29_idl" }
bytemuck = { version = "1.4.0", features = ["min_const_generics", "derive"] }
uint = "0.9.5"


